# hoopla

./: .gitignore  conftest.py  pyproject.toml
cache/: docmap.pkl
cli/: evaluation_cli.py  hybrid_search_cli.py  keyword_search_cli.py  semantic_search_cli.py  test_gemini.py
data/: movies_small.json
search/: chunked_semantic_search.py  evaluation.py  hybrid_search.py  inverted_index.py  keyword_search.py  rerank.py  search_utils.py  semantic_search.py  text_processor.py  utils.py
search/impl/: hybrid_search_impl.py  keyword_search_impl.py  search_utils_impl.py  semantic_search_impl.py
tests/search/: test_text_processor.py  test_utils.py
