[project]
name = "hoopla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.49.0",
    "nltk==3.9.1",
    "numpy>=2.3.4",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.3",
    "sentence-transformers>=5.1.2",
]
